[package]
name = "lotus-audio-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytebuffer = "2.2.0"
crc = "3.0.1"
log = "0.4.20"
lotus-lib = "3.*"
rand = "0.8.5"
zerocopy = "0.7.32"
